2001-12-12  Chris Abbey  <jikes@cabbey.net>
	    Eric Blake  <ebb9@email.byu.edu>

	* src/zip.cpp: Reformat to 80 columns.

2001-12-12  Mo DeJong  <supermo@bayarea.net>

	* src/zip.cpp (Zip, ReadDirectory): Use constants instead of hard
	coded numbers. If a valid END header can't be found at the end of
	the file we need to scan the file backwards. This matches the
	implementation of the command line unzip utility. The Zip file
	format is so brain damaged that this is the only option.
	* src/zip.h (Zip, IsValid): Add enum constants for ZIP header
	sizes and magic numbers - bug 261, patch 246.

2001-12-12  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (AppendString): Fix regression from patch 237,
	when doing string concatenation with primitives.

2001-12-11  Mo DeJong  <supermo@bayarea.net>

	Patch 243, based on poll of user base.
	* src/option.cpp (ExpandAtFileArgument, GetErrorMessage):
	Revert modifications to @file processing made on
	2001-11-01. Only one file name per line is supported.
	Remove unused error condition.
	* src/option.h (UNTERMINATED_QUOTE): Remove unused
 	error condition.

2001-12-10  Chris Dennis  <Chris.Dennis@invidi.com>

	* src/expr.cpp (ProcessClassInstanceCreationExpression): Yet
	another case of bug 2377, bad for-loop scoping in VC++.

2001-12-09  Eric Blake  <ebb9@email.byu.edu>

	* src/body.cpp (ProcessTryStatement): Update finally blocks to
	"interrupt" other abrupt completions when the finally block itself
	completes abruptly. Also, check for duplicated unchecked
	exceptions in catch clauses - bug 1858.
	* src/bytecode.cpp (EmitTryStatement, ProcessAbruptExit, IsNop):
	Add optimizations for empty finally statement.
	* src/bytecode.h (IsNop): New method.
	* src/error.h:
	* src/error.cpp (UNREACHABLE_DEFAULT_CATCH_CLAUSE): Delete, since
	it is no longer possible to detect.
	* src/expr.cpp:
	* src/init.cpp: Remove attempts to track unchecked exceptions in
	the TryExceptionTableStack: since Sun claims that all